--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "com.recoyxgroup.localization",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Localization",
-  "type": "module",
-  "main": "src/library.js",
+  "main": "src/lib.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'test/**/*.ts'"
   },
   "keywords": [
     "localization",
@@ -16,7 +15,7 @@
     "i18n"
   ],
   "author": "Klaider",
-  "repository": "https://github.com/recoyx/Localization",
+  "repository": "https://github.com/recoyx/Localization-js",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
@@ -28,5 +27,15 @@
   },
   "browser": {
     "src/FSLoader4NodeJS.ts": "src/FSLoader4Browser.ts"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.15",
+    "@types/language-tags": "^1.0.0",
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.32",
+    "chai": "^4.3.3",
+    "mocha": "^8.3.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
